--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/Cv.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Cv.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -36,7 +36,7 @@
     <div class="container-fluid" id="container-principal">
         <div class="row justify-content-center">
             <div class="col-3">
-                <img src="/images/Cv.png" id="logo-cv" width="50%" height="55%" alt="logo cv">
+                <img src="images/Cv.png" id="logo-cv" width="50%" height="55%" alt="logo cv">
             </div>
             <div class="col-2">
                 <ul><a href="#quien-soy" class="btn btn-light" onclick="mostrarInformacion()">¿QUIEN SOY?</a></ul>
